@@ -119,7 +119,7 @@ public class PackagerBlockEntity extends BaseBlockEntity {
 		if(currentPattern == null) {
 			return false;
 		}
-		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).collect(Collectors.toList());
+		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).toList();
 		if(input.isEmpty()) {
 			return false;
 		}
@@ -165,7 +165,7 @@ public class PackagerBlockEntity extends BaseBlockEntity {
 		if(powered) {
 			return;
 		}
-		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).collect(Collectors.toList());
+		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).toList();
 		if(input.isEmpty()) {
 			return;
 		}
@@ -200,7 +200,7 @@ public class PackagerBlockEntity extends BaseBlockEntity {
 			endProcess();
 			return;
 		}
-		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).collect(Collectors.toList());
+		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).toList();
 		if(input.isEmpty()) {
 			endProcess();
 			return;
